<resources>
    <string name="app_name">EPAMlibrary</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_my_library">My Library</string>
    <string name="by">by</string>
    <string name="owner">owner</string>
    <string name="title_edit">Edit</string>
    <string name="label_title">Book Title</string>
    <string name="label_author">Author</string>
    <string name="label_year">Year of publication</string>
    <string name="label_description">Description</string>
    <string name="button_lazy">I am lazy</string>
    <string name="label_delete_book">Delete book</string>
    <string name="label_search_hint">search books, authors and etc.</string>
    <string name="label_categories">Categories</string>
    <string name="label_see_all">See all</string>
    <string name="title_rented_books">Rented Books</string>
    <string name="title_wish_list">My Wish List</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_phone_number">Phone number</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat Password</string>
    <string name="label_register">Register</string>
    <string name="label_login">Login</string>
    <string name="label_dont_have">Do not have account yet?</string>
    <string name="label_top">Top rated</string>
    <string name="title_categories">Categories</string>
    <string name="title_details">Details</string>
    <string name="label_add_wish_list">Add to Wish List</string>
    <string name="button_rent">Rent</string>
    <string name="button_reviews">Reviews</string>
</resources>
