<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="4dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/edit_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_back"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_centerVertical="true"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_edit"
                    android:textAllCaps="true"
                    android:textColor="@color/colorEpamGray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            <ImageView
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_done"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_cover"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp">

                <EditText
                        android:id="@+id/edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_title"/>

                <EditText
                        android:id="@+id/edit_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/label_author"/>

                <Spinner
                        android:layout_marginTop="4dp"
                        android:id="@+id/edit_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/label_description"
                android:lines="2"
                android:maxLength="500"/>

        <Button
                android:id="@+id/lazy_button"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:text="@string/button_lazy"
                android:backgroundTint="@color/colorPrimary"/>

        <Button
                android:id="@+id/delete_button"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:text="@string/label_delete_book"
                android:backgroundTint="@color/colorRed"/>
    </LinearLayout>


</FrameLayout>