<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".base.RegisterActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <ImageView android:layout_width="150dp"
                       android:layout_height="100dp"
                       android:layout_gravity="center"
                       android:layout_marginLeft="50dp"
                       android:layout_marginRight="50dp"
                       android:layout_marginBottom="50dp"
                       android:layout_marginTop="120dp"
                       android:background="@drawable/ic_epam_logo"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:imeOptions="actionDone"
                        android:hint="@string/label_phone_number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/fullName"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:imeOptions="actionDone"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:hint="@string/label_full_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_marginLeft="50dp"
                        android:imeOptions="actionDone"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:hint="@string/label_password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/repeatPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:imeOptions="actionDone"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:hint="@string/label_repeat_password"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/register_button"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:textAllCaps="true"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorWhite"
                    android:text="@string/label_register"
                    android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>