<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_explore"
                android:textAllCaps="true"
                android:textColor="@color/colorEpamGray"
                android:textSize="16sp"
                android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize">

        <android.support.v7.widget.SearchView
                android:id="@+id/books_search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="text"
                app:queryBackground="@android:color/transparent"
                android:clickable="true"
                app:queryHint="@string/label_search_hint"
                app:defaultQueryHint="@string/label_search_hint"
                android:background="@drawable/search_view_background"/>

        <LinearLayout
                android:id="@+id/explore_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_categories"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:textAllCaps="true"
                        android:textColor="@color/colorEpamGray"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_alignParentLeft="true"/>

                <LinearLayout
                        android:id="@+id/categories_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackground">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_see_all"
                            android:textAllCaps="true"
                            android:textColor="@color/gray"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginRight="8dp"
                            android:layout_marginEnd="8dp"/>

                    <ImageView
                            android:id="@+id/arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_arrow"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                <ImageView
                        android:id="@+id/arts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_category_arts"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp"/>

                <ImageView
                        android:id="@+id/bibliographies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_category_bibliographies"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp"/>

                <ImageView
                        android:id="@+id/business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_category_business"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp"/>

                <ImageView
                        android:id="@+id/calendars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_category_calendars"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp"/>
            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_top"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:textAllCaps="true"
                        android:textColor="@color/colorEpamGray"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_alignParentLeft="true"/>

                <LinearLayout
                        android:id="@+id/top_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackground">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_see_all"
                            android:textAllCaps="true"
                            android:textColor="@color/gray"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginRight="8dp"
                            android:layout_marginEnd="8dp"/>

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_arrow"/>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/books_recycler_view"
                android:scrollbars="vertical"
                android:clipToPadding="false"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>