<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="4dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_back"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentLeft="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_centerVertical="true"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_details"
                    android:textAllCaps="true"
                    android:textColor="@color/colorEpamGray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/image"
                        android:layout_width="100dp"
                        android:layout_height="140dp"
                        app:srcCompat="@drawable/cover"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical"
                        android:layout_marginLeft="8dp">

                    <!--Title -->
                    <TextView
                            android:id="@+id/title"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:textAllCaps="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="The world of abstract art"
                            android:layout_marginTop="4dp"/>

                    <!--Author -->
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_marginRight="4dp"
                                android:layout_marginEnd="4dp"
                                android:text="@string/by"/>

                        <TextView
                                android:id="@+id/author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp"
                                tools:text="Emily Robbins"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginTop="4dp"
                            android:layout_alignParentRight="true">

                        <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@drawable/ic_star"/>

                        <TextView
                                android:id="@+id/rate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginLeft="4dp"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textAllCaps="true"
                                tools:text="4.5"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginTop="4dp"
                            android:layout_alignParentRight="true">

                        <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@drawable/ic_heart_not_filled"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginLeft="4dp"
                                android:textSize="12sp"
                                android:textColor="@color/black"
                                android:text="@string/label_add_wish_list"/>
                    </LinearLayout>

                    <TextView
                            android:id="@+id/category"
                            android:layout_marginTop="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryDark"
                            tools:text="Design"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."/>

            <Button
                    android:id="@+id/rent_button"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:textAllCaps="true"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorWhite"
                    android:text="@string/button_rent"
                    android:backgroundTint="@color/colorPrimary"/>

            <Button
                    android:id="@+id/reviews_button"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:textAllCaps="true"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorWhite"
                    android:text="@string/button_reviews"
                    android:backgroundTint="@color/colorRed"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>